# spline_mesher

./: .buildinfo  .gitignore  MANIFEST.in  README.md  configuration.html  cortical_sanity.html  cortical_sanity.py  genindex.html  gmsh_mesh_builder.html  gmsh_repair_fcts.py  gmsh_spline_mesh.py  hfe_input_transformer.py  hr_pqct_meshing.html  installation.html  meshing_notes.txt  objects.inv  params.py  py-modindex.html  pyproject.toml  pytest.ini  quad_refinement.html  rearrange__geo_unrolled.ipynb  requirements-dev.txt  requirements-old.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  spline_mesher.html  spline_volume.html  standalone.py  tox.ini
.doctrees/: configuration.doctree  contributing.doctree  cortical_sanity.doctree  environment.pickle  getting_started.doctree  gmsh_mesh_builder.doctree  hr_pqct_meshing.doctree  index.doctree  installation.doctree  quad_refinement.doctree  spline_mesher.doctree  spline_volume.doctree
.github/workflows/: docs.yml  python-app.yml  python-app2.yml
_modules/: cortical_sanity.html  gmsh_mesh_builder.html  quad_refinement.html  spline_mesher.html  spline_volume.html
_sources/: configuration.rst.txt  spline_volume.rst.txt
examples/: standalone_execution.ipynb
futils/: conversion.py  geo_utils.py  structure.py
src/: requirements.txt
src/cython_functions/: find_closed_curve.c  find_closed_curve.pyx
src/pyhexspline/: __init__.py  cortical_sanity.py  geometry_cleaner.py  geometry_cleaner_uniques.py  gmsh_mesh_builder.py  quad_refinement.py  spline_blender_prototyping.py  spline_mesher copy.py  spline_mesher.py  spline_volume.py
src/pyhexspline/cfgdir/: cfg_matplotlib.py
src/pyhexspline/docs/: conf.py  contributing.rst  gmsh_mesh_builder.rst  hr_pqct_meshing.rst  index.rst  modules.rst  quad_refinement.rst  spline-volume-creation.rst  spline_mesher.rst  spline_volume.rst
src/pyhexspline/docs/_build/doctrees/: configuration.doctree  contributing.doctree  cortical_sanity.doctree  environment.pickle  getting_started.doctree  gmsh_mesh_builder.doctree  hr_pqct_meshing.doctree  index.doctree  installation.doctree  modules.doctree  quad_refinement.doctree  spline-volume-creation.doctree  spline_mesher.doctree  spline_volume.doctree
src/pyhexspline/docs/_build/html/: .buildinfo  configuration.html  contributing.html  cortical_sanity.html  genindex.html  getting_started.html  gmsh_mesh_builder.html  index.html  (+11 more)
src/pyhexspline/futils/: file_access_utilities.py  hfe_input_transformer.py  setup_utils.py  structure.py
src/spline_mesher/: correction_binary_threshold.ipynb  cortical_sanity.py  find_closed_curve.c  find_closed_curve.pyx  find_closed_curve_loops.rs  gmsh_mesh_builder.py  gmsh_repair_fcts.py  gmsh_spline_mesh.py  gmsh_spline_mesh_old.py  merge-meshes-prototype.ipynb  quad-refinement-schneiders.ipynb  quad-refinement.py  quad_refinement.py  spline-volume-creation.py  spline_mesher.py  spline_volume.py  spline_volume_creation.py  standalone.py  trabecular_t.ipynb
src/spline_mesher/cython_functions/: find_closed_curve.c  find_closed_curve.pyx
src/spline_mesher/docs/: conf.py
src/spline_mesher/futils/: geo_utils.py  setup_utils.py
tests/: BSpline_surface_prova.py  bsplines_transfinite_prova.ipynb  quadqs_statistics.json  tensor_of_inertia.ipynb  test.geo  test_bsplines_transfinite.ipynb  test_mesh_order.py  test_spline_volume.py  tests_cortical_sanity.py  untitled.geo
tmp/: Correction_external_position.eps  intersection_internal.ipynb  rearrange__geo_unrolled.ipynb  test_point_correction.ipynb.ipynb
(+26 files in other folders)
