[metadata]
name = spline_mesher
description = A Python package for generating GMSH meshes from SCANCO masks.
long_description = file: README.md
author = Simone Poncioni
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages =
    spline_mesher
install_requires =
    requests>=2
    gmsh>=4.10
    matplotlib>=3.6
    numpy>=1.21
    plotly>=5.11
    scipy>=1.9
    seaborn>=0.12
    SimpleITK>=2.2
    vtk>=9.2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    nose>=1.3

[options.package_data]
spline_mesher = py.typed

[flake8]
max-line-length = 240