[metadata]
name = pyhexspline
description = A Python package for generating GMSH meshes from SCANCO HR-pQCT images
long_description = file: README.md
author = Simone Poncioni
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages =
    pyhexspline
install_requires =
    gmsh>=4.11
    matplotlib>=3.5
    nose >= 1.3.7
    numpy>=1.21
    opencv_python>=4.5
    plotly>=5.11
    scipy <= 1.9
    shapely>=1.9
    seaborn>=0.12
    SimpleITK>=2.2
    vtk>=9.2
    cython>=0.29.30
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    nose>=1.3
    cython>=0.29.30


[options.package_data]
spline_hexmesher = py.typed
cython_functions = cython_functions.pyx

[flake8]
max-line-length = 240
extend-ignore = E203

[mypy]
python_version = 3.9
ignore_missing_imports = True

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest --cov=spline_mesher tests/
