[metadata]
name = pyhexspline
description = A Python package for generating GMSH meshes from SCANCO HR-pQCT images
long_description = file: README.md
author = Simone Poncioni
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages =
    pyhexspline
install_requires =
    gmsh>=4.10
    matplotlib>=3.5
    nose>=1.3.7
    numpy>=1.26,<2.0
    opencv_python>=4.5
    plotly>=5.11
    scipy>=1.10
    Shapely>=2.0.3
    seaborn>=0.12
    SimpleITK>=2.2
    vtk>=9.2
    cython>=0.29.30
    imutils>=0.5.4
    scikit-image>=0.22

python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    cython>=0.29.30
    scikit-image>=0.22
    imutils>=0.5.4

[options.package_data]
spline_hexmesher = py.typed
cython_functions = cython_functions.pyx

[flake8]
max-line-length = 240
extend-ignore = E203

[mypy]
python_version = 3.9, 3.10, 3.11, 3.12
ignore_missing_imports = True

[testenv]
deps =
    .[testing]
commands =
    pytest --cov=spline_mesher tests/
